--- a/index.html
+++ b/index.html
@@ -2,32 +2,59 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Zahnur – South Asian Bridal & Party Wear</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Zahnur – Coming soon. Explore timeless South Asian bridal and party wear with a modern flair.">
-  <meta name="keywords" content="bridal wear, Pakistani fashion, South Asian clothing, party wear, lehenga, saree, designer wear">
-  <meta name="author" content="Zahnur">
-  <link rel="icon" href="https://fav.farm/💍" />
+  
+  <title>Zahnur – South Asian Bridal & Party Wear - ZAHNUR </title>
+  <meta name="description" content="Zahnur offers handcrafted South Asian bridal and party wear. Discover timeless fashion with elegance and heritage. Coming soon.">
+  <meta name="keywords" content="Zahnur, bridal wear, party wear, South Asian fashion, Pakistani dresses, wedding clothes, formal wear">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Zahnur – South Asian Bridal & Party Wear">
+  <meta property="og:description" content="Zahnur brings you exclusive bridal and party wear, inspired by the richness of South Asian tradition. Coming soon.">
+  <meta property="og:url" content="https://zahnur.com">
+  <meta property="og:type" content="website">
+
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #fff8f5;
-      color: #333;
+      margin: 0;
+      font-family: 'Helvetica Neue', sans-serif;
+      background-color: #fafafa;
+      color: #222;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
       text-align: center;
-      padding: 100px 20px;
+      padding: 20px;
     }
+
     h1 {
-      font-size: 3em;
-      color: #b30059;
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
     }
+
     p {
-      font-size: 1.2em;
-      color: #444;
+      font-size: 1.2rem;
+      max-width: 600px;
+    }
+
+    .brand {
+      font-size: 1rem;
+      letter-spacing: 2px;
+      color: #999;
+      margin-top: 1.5rem;
     }
   </style>
 </head>
+
 <body>
-  <h1>Zahnur</h1>
-  <p>✨ Our bridal & party wear collection is launching soon. Stay tuned. ✨</p>
+  <h1>Coming Soon</h1>
+  <p><strong>ZAHNUR</strong> is launching soon with timeless South Asian bridal & party wear. Discover elegance, heritage, and craftsmanship.</p>
+  <div class="brand">ZAHNUR.COM</div>
 </body>
 </html>
