--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- For standard browsers -->
+  <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
   
+  <!-- For older Microsoft browsers -->
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  
+  <!-- For Apple touch devices -->
+  <link rel="apple-touch-icon" href="/favicon.png">  
   <title>Zahnur – South Asian Bridal & Party Wear - ZAHNUR </title>
   <meta name="description" content="Zahnur offers handcrafted South Asian bridal and party wear. Discover timeless fashion with elegance and heritage. Coming soon.">
   <meta name="keywords" content="Zahnur, bridal wear, party wear, South Asian fashion, Pakistani dresses, wedding clothes, formal wear">
